# xjd-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_v0.3.1.md  SECURITY.md  deploy_feishu_bot.sh  pyproject.toml  start_ecommerce_bot.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agent/: __init__.py
agent/context/: __init__.py  pin_manager.py
agent/context_engine/: __init__.py  manager.py
agent/core/: audit.py  canvas.py  canvas_export.py  canvas_store.py  checkpoint.py  config.py  context_references.py  cost_tracker.py  credential_manager.py  engine.py  hooks.py  identity.py  model_router.py  multi_agent.py  pii_redactor.py  profile.py  rag.py  sandbox.py  secrets.py  task_brain.py  terminal.py  updater.py  workspace_files.py
agent/ecommerce/: __init__.py  base.py  coordinator.py  protocol.py  registry.py  roles.py  session.py  shared_memory.py  task_queue.py  tools.py
agent/hub/: __init__.py  client.py  index.py
agent/memory/: __init__.py  config.py  consolidator.py  embedding.py  llm_utils.py  manager.py  metrics.py  provider.py  reflector.py
agent/plugins/: __init__.py  manager.py  mcp_client.py  mcp_server.py
agent/providers/: anthropic_provider.py  base.py  google_provider.py  openai_provider.py
agent/skills/: __init__.py  community.py  composer.py  evaluator.py  learning_loop.py  manager.py  marketplace.py  optimizer.py  procedural_bridge.py  sandbox_policy.py
agent/tools/: approval_tools.py  browser.py  builtin.py  canvas_tools.py  code_tools.py  computer_use.py  cron_tools.py  data_tools.py  ecommerce_ops_tools.py  ecommerce_tools.py  extended.py  file_tools.py  gateway_tools.py  hub_tools.py  knowledge_canvas.py  media_tools.py  memory_tools.py  misc_tools.py  network_tools.py  registry.py  skill_tools.py  system_tools.py  tool_selector.py  web_tools.py
agent/training/: __init__.py  evaluator.py  rl_trainer.py
cli/: main.py
cli/commands/: __init__.py  subcommands.py
config/: ecommerce_feishu_config.yaml  feishu_config.yaml
deploy/: deploy.sh
docker/: .env.example  Dockerfile  README.md  docker-compose.yml
docs/: README.md  api-reference.md  architecture.md  deployment.md  plugin-guide.md
docs/zh/: ecommerce-image-guide.md  feishu-group-guide.md
gateway/: __init__.py
gateway/canvas/: __init__.py  renderer.py
gateway/core/: __init__.py  auth.py  heartbeat.py  monitoring.py  proactive.py  redis_manager.py  resilience.py  server.py  session.py
gateway/cron/: __init__.py  scheduler.py
gateway/media/: __init__.py  channel_files.py  processor.py
gateway/voice/: __init__.py  audio_utils.py  pipeline.py  wake_word.py
scripts/: seed_hub.py
sdk/: __init__.py  client.py
skills/: _archived_ecommerce_image_generation.py  calabash_ai_drawing_functions.md  calabash_auto_generate.md  calabash_upload_generate.md  feishu_group_management.py
skills/creative/: blog-post.yaml  brainstorm.yaml  copywriting.yaml  email-campaign.yaml  podcast-outline.yaml  presentation-outline.yaml  social-media-post.yaml  video-script.yaml
skills/daily-ai-news/: SKILL.md
skills/data-science/: ab-testing.yaml  anomaly-detection.yaml  data-analysis.yaml  data-cleaning.yaml  data-pipeline.yaml  feature-engineering.yaml  model-training.yaml  visualization.yaml
skills/devops/: backup-restore.yaml  container-debug.yaml  database-optimization.yaml  docker-deploy.yaml  kubernetes-deploy.yaml  load-testing.yaml  log-analysis.yaml  monitoring-setup.yaml  nginx-config.yaml  server-diagnose.yaml  ssl-certificate.yaml
skills/ecommerce-image-pipeline/: SKILL.md
skills/ecommerce-ops/: SKILL.md
skills/productivity/: api-documentation.yaml  changelog-generator.yaml  code-migration.yaml  (+10 more)
tests/: conftest.py  test_sdk.py
tools/: image_processor.py
web/: __init__.py  openai_api.py  server.py
(+82 files in other folders)
